--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "PetShopNova es una plataforma de productos para mascotas moderna y fácil de usar, diseñada para brindar la mejor experiencia de compra en línea. Nuestro objetivo es ofrecer una amplia variedad de productos para tus amigos peludos, asegurando una compra segura y eficiente para el cliente.",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["mascotas", "tienda", "petshop", "online"],
-  "author": "Maikol Fernandez",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
